# SASE-SDWAN

./: .env.example  .gitignore  API_SPEC.yaml  ARCHITECTURE.md  COMPLIANCE.md  Makefile  PERFORMANCE.md  PLAN.md  README.md  docker-compose.lite.yml  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs  models.rs  webhooks.rs
api/src/middleware/: auth.rs  mod.rs  permissions.rs  rate_limit.rs
api/src/routes/: alerts.rs  analytics.rs  api_keys.rs  apps.rs  health.rs  mod.rs  policies.rs  sites.rs  tunnels.rs  users.rs  webhooks.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs  output.rs
cli/src/commands/: alerts.rs  analytics.rs  config.rs  mod.rs  policies.rs  sites.rs  users.rs
client/core/: Cargo.toml
client/core/src/: config.rs  lib.rs  platform.rs  policy.rs  posture.rs  telemetry.rs  traffic.rs  tunnel.rs  update.rs
components/casb-lite/: README.md  pyproject.toml
components/casb-lite/casb_lite/: __init__.py  models.py
components/casb-lite/casb_lite/connectors/: __init__.py  base.py  google_workspace.py  microsoft_365.py
components/dlp-lite/: README.md  pyproject.toml
components/dlp-lite/dlp_lite/: __init__.py  models.py  scanner.py
components/dlp-lite/dlp_lite/classifiers/: __init__.py  base.py  checksum.py  entropy.py  regex.py
components/dlp-lite/dlp_lite/exporters/: __init__.py  wazuh.py
components/dlp-lite/sample_files/: README.md  test_api_keys.txt  test_credit_card.txt  test_ssn.txt
components/upo/: README.md  pyproject.toml
components/upo/sample_policies/: corporate-access.yaml
components/upo/tests/: test_adapters.py
components/upo/upo/: __init__.py  cli.py  compiler.py  main.py  models.py
components/upo/upo/adapters/: __init__.py  base.py  flexiwan.py  openziti.py  opnsense.py
edge/: Cargo.toml
edge/docker/: Dockerfile  entrypoint.sh
edge/src/: api.rs  config.rs  ha.rs  hardware.rs  health.rs  lib.rs  main.rs  metrics.rs  network.rs  routing.rs  sdwan.rs  security.rs  services.rs  tunnel.rs  ztp.rs
edge/terraform/aws/: main.tf  userdata.sh.tpl
edge/terraform/hetzner/: main.tf
edge/terraform/ovh/: main.tf
ml/inference/: Cargo.toml
ml/inference/src/: alerts.rs  features.rs  feedback.rs  hunting.rs  inference.rs  intel.rs  lib.rs  models.rs
opensase-core/: Cargo.toml  Dockerfile  README.md
opensase-core/benches/: policy_lookup.rs
opensase-core/bpf/: maps.h  xdp_classifier.c
opensase-core/crates/sase-apigw/: Cargo.toml
opensase-core/crates/sase-apigw/src/: analytics.rs  auth.rs  ddos.rs  kong.rs  lib.rs  ratelimit.rs  routing.rs  transform.rs
opensase-core/crates/sase-backbone/: Cargo.toml
opensase-core/crates/sase-backbone/src/: bgp.rs  capacity.rs  cdn.rs  cost.rs  cost_optimizer.rs  lib.rs  mesh.rs  orchestrator.rs  peering.rs  vpp_integration.rs
opensase-core/crates/sase-behavioral/: Cargo.toml
opensase-core/crates/sase-behavioral/src/: lib.rs
opensase-core/crates/sase-billing/: Cargo.toml
opensase-core/crates/sase-billing/src/: credits.rs  invoicing.rs  lib.rs  metering.rs  payments.rs  pricing.rs  subscriptions.rs
opensase-core/crates/sase-casb/: Cargo.toml
opensase-core/crates/sase-casb/src/: lib.rs
opensase-core/crates/sase-client/: Cargo.toml
opensase-core/crates/sase-client/src/: auth.rs  certs.rs  config.rs  connection.rs  diagnostics.rs  dns.rs  ffi.rs  gateway.rs  intercept.rs  keychain.rs  lib.rs  platform.rs  policy.rs  posture.rs  power.rs  (+3 more)
opensase-core/crates/sase-cloud-connector/: Cargo.toml
opensase-core/crates/sase-common/: Cargo.toml
opensase-core/crates/sase-compliance/: Cargo.toml
opensase-core/crates/sase-crm/: Cargo.toml
opensase-core/crates/sase-dataplane/: Cargo.toml
opensase-core/crates/sase-ddos/: Cargo.toml
opensase-core/crates/sase-dlp/: Cargo.toml
opensase-core/crates/sase-email-security/: Cargo.toml
opensase-core/crates/sase-envoy-filters/: Cargo.toml
opensase-core/crates/sase-forms/: Cargo.toml
opensase-core/crates/sase-fpe/: Cargo.toml
opensase-core/crates/sase-gateway/: Cargo.toml
opensase-core/crates/sase-ips/: Cargo.toml
opensase-core/crates/sase-ite/: Cargo.toml
opensase-core/crates/sase-l7/: Cargo.toml
opensase-core/crates/sase-marketing/: Cargo.toml
opensase-core/crates/sase-ml/: Cargo.toml
opensase-core/crates/sase-orchestrator/: Cargo.toml
opensase-core/crates/sase-path/: Cargo.toml
opensase-core/crates/sase-peering/: Cargo.toml
opensase-core/crates/sase-policy/: Cargo.toml
opensase-core/crates/sase-rbi/: Cargo.toml
opensase-core/crates/sase-resilience/: Cargo.toml
opensase-core/crates/sase-sdwan/: Cargo.toml
opensase-core/crates/sase-soc/: Cargo.toml
opensase-core/crates/sase-support/: Cargo.toml
opensase-core/crates/sase-tenant/: Cargo.toml
opensase-core/crates/sase-threat-intel/: Cargo.toml
opensase-core/crates/sase-usie/: Cargo.toml
opensase-core/crates/sase-vpp/: Cargo.toml
opensase-core/crates/sase-xdp/: Cargo.toml
opensase-core/crates/sase-xds/: Cargo.toml
opensase-core/crates/sase-ztna/: Cargo.toml
opensase-core/crates/vpp-gateway/: Cargo.toml  build.rs
opensase-core/docs/: L7_GATEWAY.md  VPP_100GBPS_GUIDE.md  VPP_ARCHITECTURE.md  VPP_TUNING.md
opensase-core/docs/api/: opensase-api.yaml
opensase-core/docs/openapi/: opensase-api-paths-crm-payments.yaml
opensase-core/envoy/: docker-compose.yaml
opensase-core/envoy/config/: envoy.yaml
opensase-core/k8s/: deployment.yaml  harvester-config.yaml
opensase-core/sdks/python/: __init__.py
opensase-core/sdks/rust/: lib.rs
opensase-core/vpp/: CMakeLists.txt  Makefile  README.md
opensase-core/vpp/config/: interfaces.conf  opensase.conf  setup.conf  startup-100g.conf  startup.conf  wireguard.conf
opensase-core/vpp/scripts/: benchmark-vpp.sh  bind_dpdk.sh  install-opensase-vpp.sh  prepare-vpp-host.sh  setup_hugepages.sh
opensase-core/vpp/tests/: BENCHMARK_TARGETS.md  CMakeLists.txt  benchmark_vpp.py  run-benchmark.sh  trex_benchmark.py  trex_cfg.yaml
portal/backend/: Cargo.toml  Dockerfile  requirements.txt
portal/backend/app/: main.py
portal/backend/src/: auth.rs  handlers.rs  main.rs  models.rs  ws.rs
(+636 files in other folders)
