[package]
name = "opensase-cli"
version = "0.1.0"
edition = "2021"
description = "OpenSASE Command Line Interface"

[[bin]]
name = "opensase"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tabled = "0.15"
colored = "2"
dirs = "5"
toml = "0.8"
