[package]
name = "ostie"
version = "0.1.0"
edition = "2021"
description = "OpenSASE Threat Intelligence Engine - ML-powered threat detection"

[lib]
name = "ostie"
path = "src/lib.rs"

[[bin]]
name = "ostie-server"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ML
linfa = "0.7"
linfa-trees = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# Math/Stats
nalgebra = "0.32"
statrs = "0.16"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"

# Web
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tokio-test = "0.4"
