[package]
name = "sase-backbone"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenSASE Global Backbone - BGP, Mesh, Transit, CDN"

[dependencies]
sase-common = { path = "../sase-common" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "net"] }
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
ipnetwork.workspace = true
rust_decimal = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio-test.workspace = true
