[package]
name = "sase-client"
version = "0.1.0"
edition = "2021"
description = "OpenSASE Client Suite - Cross-platform ZTNA client"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["wireguard", "posture"]
wireguard = ["boringtun"]
posture = []
ffi = []  # For mobile/desktop bindings

[dependencies]
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5"

# WireGuard
boringtun = { version = "0.6", optional = true }
x25519-dalek = "2"
rand = "0.8"
base64 = "0.21"

# Crypto
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"

# System info (cross-platform)
sysinfo = "0.30"
hostname = "0.3"

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Registry", "Win32_Security", "Win32_NetworkManagement_IpHelper"] }
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["net", "user"] }

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
# Mobile-specific deps handled via FFI

[build-dependencies]
cbindgen = "0.26"
