[package]
name = "sase-cloud-connector"
version = "0.1.0"
edition = "2021"
description = "OpenSASE Cloud Connector - AWS Direct Connect, Azure ExpressRoute, GCP Cloud Interconnect"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for cloud APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# IP networking
ipnet = { version = "2.9", features = ["serde"] }

# Concurrent data structures
dashmap = "5"
parking_lot = "0.12"

[features]
default = []
aws = []
azure = []
gcp = []
