[package]
name = "sase-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
arc-swap.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
