[package]
name = "sase-ddos"
version = "0.1.0"
edition = "2021"
description = "OpenSASE DDoS Shield - Carrier-grade DDoS mitigation"
authors = ["OpenSASE Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Networking
ipnetwork = "0.20"

# Data structures
dashmap = "5"
parking_lot = "0.12"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "detection"
harness = false
