[package]
name = "sase-dlp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ultra-fast DLP scanner with 10GB/s throughput"

[dependencies]
sase-common = { path = "../sase-common" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
aho-corasick.workspace = true
regex.workspace = true
memchr.workspace = true
bytes.workspace = true

[dev-dependencies]
criterion.workspace = true
