[package]
name = "sase-email-security"
version = "0.1.0"
edition = "2021"
description = "OpenSASE Email Security Gateway - Anti-spam, anti-phishing, anti-malware"
authors = ["OpenSASE Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "5"
parking_lot = "0.12"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for URL scanning)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Regex for pattern matching
regex = "1"

# Email parsing
mail-parser = "0.9"

# Base64 for attachments
base64 = "0.21"

# HTML parsing
scraper = "0.18"

# URL parsing
url = "2"

# Hashing
sha2 = "0.10"

# Machine learning (for spam/BEC)
# linfa = "0.7"
# linfa-bayes = "0.7"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
