[package]
name = "sase-envoy-filters"
version = "0.1.0"
edition = "2021"
authors = ["OpenSASE Team"]
description = "WASM filters for Envoy Proxy - SWG, DLP, CASB"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Proxy-WASM SDK
proxy-wasm = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for pattern matching
regex = "1.10"

# Logging
log = "0.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
