[package]
name = "sase-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified high-performance API gateway for OpenSASE"

[dependencies]
sase-common = { path = "../sase-common" }
sase-policy = { path = "../sase-policy" }
sase-dlp = { path = "../sase-dlp" }
sase-path = { path = "../sase-path" }
sase-ml = { path = "../sase-ml" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true

[dev-dependencies]
tokio-test.workspace = true
